01..=08 logic updated + formatting